--- a/src/components/sicl-input/sicl-input.scss
+++ b/src/components/sicl-input/sicl-input.scss
@@ -1,3 +1,62 @@
 :host {
   display: block;
 }
+
+.input__label {
+  color: $neutral-700;
+}
+
+.input__field {
+  box-sizing: border-box;
+  padding: 12px 16px;
+  border-radius: 16px;
+  border: 2px solid $primary-500;
+  margin: 8px 0px;
+  transition: 180ms box-shadow ease-in-out;
+
+  &:not(textarea) {
+    line-height: 1;
+    height: 2.25rem;
+  }
+
+  &[disabled] {
+    cursor: not-allowed;
+    border: 2px solid $neutral-500;
+    background: $neutral-100;
+  }
+
+  &:focus:not([disabled]) {
+    outline: 3px solid transparent;
+    background-color: $primary-100;
+    border-color: 2px solid $primary-500;
+    box-shadow: $shadow-medium;
+  }
+
+  &:hover:not([disabled]) {
+    background-color: $primary-100;
+    border: 2px solid $primary-500;
+  }
+
+  &.warning {
+    //background-color: #fff;
+    border: 2px solid $warning-light;
+
+    &[disabled] {
+      cursor: not-allowed;
+      border: 2px solid $neutral-500;
+      background: $neutral-100;
+    }
+
+    &:focus:not([disabled]) {
+      outline: 3px solid transparent;
+      background-color: $primary-100;
+      border-color: 2px solid $warning-primary;
+      box-shadow: $shadow-medium;
+    }
+
+    &:hover:not([disabled]) {
+      background-color: $primary-100;
+      border: 2px solid $warning-primary;
+    }
+  }
+}
