--- a/src/components/sicl-input/sicl-input.scss
+++ b/src/components/sicl-input/sicl-input.scss
@@ -1,5 +1,15 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input__icon-left {
+  color: $neutral-700;
+}
+
+.input__icon-right {
+  color: "currentColor";
 }
 
 .input__label {
@@ -7,12 +17,22 @@
 }
 
 .input__field {
+  outline: none;
+  border: none;
+  background: transparent;
+}
+
+.input__wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   box-sizing: border-box;
   padding: 12px 16px;
   border-radius: 16px;
   border: 2px solid $primary-500;
   margin: 8px 0px;
   transition: 180ms box-shadow ease-in-out;
+  cursor: text;
 
   &:not(textarea) {
     line-height: 1;
