--- a/src/global/global.css
+++ b/src/global/global.css
@@ -6,58 +6,16 @@ body {
 /* Optional to add containers in global */
 /* Adding for demo purpose only */
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: #fff;
   border-radius: 16px;
-  margin: 200px 400px;
-  padding: 200px 200px;
 }
 
 .container .row {
-  margin: 24px auto;
+  margin: 24px;
+  padding: 16px;
   display: flex;
-}
-
-.container .row.space-between {
   justify-content: space-between;
-}
-.container .row.center {
-  justify-content: center;
-}
-.container .row.v-center {
-  align-items: center;
-}
-
-@media (max-width: 1800px) {
-  .container {
-    padding: 0 400px;
-  }
-}
-@media (max-width: 1650px) {
-  .container {
-    padding: 0 300px;
-  }
-}
-
-@media (max-width: 1450px) {
-  .container {
-    padding: 0 200px;
-  }
-}
-
-@media (max-width: 1200px) {
-  .container {
-    padding: 0 100px;
-  }
-}
-
-@media (max-width: 900px) {
-  .container {
-    padding: 0 60px;
-  }
-}
-
-@media (max-width: 700px) {
-  .container {
-    padding: 0 32px;
-  }
 }
