🧹 Major cleanup 🔧 Fixed icon rendering & some variable values and styling

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -59,13 +59,13 @@ $typography_weight-bold: 700;
 $typography_weight-extra-bold: 800;
 
 /* Font style size */
-$typography_size-header-1: rem(60px);
-$typography_size-header-2: rem(48px);
-$typography_size-header-3: rem(40px);
-$typography_size-subtitle-1: rem(28px);
-$typography_size-subtitle-2: rem(18px);
-$typography_size-body-1: rem(18px);
-$typography_size-body-2: rem(16px);
+$typography_size-header-1: 60px;
+$typography_size-header-2: 48px;
+$typography_size-header-3: 40px;
+$typography_size-subtitle-1: 28px;
+$typography_size-subtitle-2: 18px;
+$typography_size-body-1: 18px;
+$typography_size-body-2: 16px;
 
 /* Font style line height */
 $typography_line-height-header-1: 1.2;
