--- a/src/components/sicl-button/sicl-button.scss
+++ b/src/components/sicl-button/sicl-button.scss
@@ -17,6 +17,7 @@
   font-family: $typography_font-family;
   font-size: $typography_size-body-1;
   font-weight: $typography_weight-semi-bold;
+  line-height: $typography_line-height-body-1;
   
   &.primary {
     background: $primary-600;
