--- a/src/components/sicl-input/sicl-input.scss
+++ b/src/components/sicl-input/sicl-input.scss
@@ -1,7 +1,9 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
+  padding: 8px;
+  row-gap: 8px;
 }
 
 .input__icon-left {
@@ -9,35 +11,57 @@
 }
 
 .input__icon-right {
-  color: "currentColor";
+  color: $primary-500;
 }
 
 .input__label {
   color: $neutral-700;
+  font-family: $typography_font-family;
+  font-size: $typography_size-body-2;
+  font-weight: $typography_weight-semi-bold;
+  line-height: $typography_line-height-body-2;
 }
 
 .input__field {
   outline: none;
   border: none;
   background: transparent;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 0px;
+  font-family: $typography_font-family;
+  font-size: $typography_size-body-2;
+  font-weight: $typography_weight-semi-bold;
+  color: $neutral-900;
+
+  ::-webkit-input-placeholder {
+      color:red;
+  }
+
+  ::-moz-placeholder {
+      color:red;
+  }
+
+  ::-ms-placeholder {
+      color:red;
+  }
+
+  ::placeholder {
+      color:red;
+  }
 }
 
 .input__wrapper {
   display: flex;
   flex-direction: row;
+  column-gap: 8px;
   align-items: center;
   box-sizing: border-box;
   padding: 12px 16px;
   border-radius: 16px;
   border: 2px solid $primary-500;
-  margin: 8px 0px;
   transition: 180ms box-shadow ease-in-out;
   cursor: text;
-
-  &:not(textarea) {
-    line-height: 1;
-    height: 2.25rem;
-  }
 
   &[disabled] {
     cursor: not-allowed;
@@ -45,7 +69,7 @@
     background: $neutral-100;
   }
 
-  &:focus:not([disabled]) {
+  &:focus-within:not([disabled]) {
     outline: 3px solid transparent;
     background-color: $primary-100;
     border-color: 2px solid $primary-500;
@@ -67,7 +91,7 @@
       background: $neutral-100;
     }
 
-    &:focus:not([disabled]) {
+    &:focus-within:not([disabled]) {
       outline: 3px solid transparent;
       background-color: $primary-100;
       border-color: 2px solid $warning-primary;
