--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -4,6 +4,7 @@
 
 html {
   font-family: 'Inter', sans-serif;
+  color: $neutral-900;
 }
 
 @supports (font-variation-settings: normal) {
@@ -38,6 +39,7 @@ h1 {
 }
 
 h2 {
+  font-family: $typography_font-family;
   font-weight: $typography_weight-extra-bold;
   font-size: $typography_size-header-2;
   line-height: $typography_line-height-header-2;
@@ -45,6 +47,7 @@ h2 {
 }
 
 h3 {
+  font-family: $typography_font-family;
   font-weight: $typography_weight-bold;
   font-size: $typography_size-header-3;
   line-height: $typography_line-height-header-3;
