🔧 Checkbox WIP ➕ Check SVG asset

--- a/src/components/sicl-checkbox/sicl-checkbox.scss
+++ b/src/components/sicl-checkbox/sicl-checkbox.scss
@@ -1,35 +1,38 @@
-:host {
-  display: flex;
-  flex-direction: row;
-  column-gap: 8px;
-}
-
-.input__checkbox {
-  background: transparent;
+input[type='checkbox'] {
+  box-sizing: border-box;
   width: 18px;
   height: 18px;
-  border-radius: 4px;
+  color: $primary-400;
   border: 1px solid $primary-400;
-  box-sizing: border-box;
+  border-radius: 4px;
+  appearance: none;
+  outline: 0;
+  cursor: pointer;
+  transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 
-  &:hover {
-    cursor: pointer;
-    background: $primary-100;
-    border: 1px solid $primary-600;
-    color: $primary-600;
+  &::before {
+    position: relative;
+    content: url(./assets/check.svg);
+    display: block;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    color: $primary-100;
+    border-style: solid;
+    border-color: $primary-100;
+    border-width: 0 2px 2px 0;
+    opacity: 0;
   }
 
   &:checked {
-    border: 1px solid $primary-600;
+    color: $primary-100;
+    border-color: $primary-600;
     background: $primary-600;
-    color: $primary-600;
+    &::before {
+      opacity: 1;
+    }
+    ~ label::before {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
   }
-}
-
-.input__label {
-  color: $neutral-900;
-  font-family: $typography_font-family;
-  font-size: $typography_size-body-2;
-  font-weight: $typography_weight-regular;
-  line-height: $typography_line-height-body-2;
 }
