--- a/src/components/sicl-checkbox/sicl-checkbox.scss
+++ b/src/components/sicl-checkbox/sicl-checkbox.scss
@@ -1,38 +1,82 @@
-input[type='checkbox'] {
-  box-sizing: border-box;
-  width: 18px;
-  height: 18px;
-  color: $primary-400;
-  border: 1px solid $primary-400;
-  border-radius: 4px;
-  appearance: none;
-  outline: 0;
-  cursor: pointer;
-  transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
+.checkbox__wrapper {
+	cursor: pointer;
 
-  &::before {
-    position: relative;
-    content: url(./assets/check.svg);
-    display: block;
-    align-items: center;
-    width: 16px;
-    height: 16px;
-    color: $primary-100;
-    border-style: solid;
-    border-color: $primary-100;
-    border-width: 0 2px 2px 0;
-    opacity: 0;
+  display: flex;
+  flex-direction: row;
+  column-gap: 8px;
+  align-items: center;
+
+  color: $neutral-900;
+  font-family: $typography_font-family;
+  font-size: $typography_size-body-2;
+  font-weight: $typography_weight-regular;
+  line-height: $typography_line-height-body-2;
+}
+
+.checkbox__wrapper input[type="checkbox"] {
+  position: absolute;
+  width: 1.3em;
+  height: 1.3em;
+  opacity: 0.00001;
+}
+
+.checkbox__wrapper svg {
+  width: 1.3em;
+  height: 1.3em;
+  box-sizing: border-box;
+
+  .checkbox__box {
+    color: $primary-400;
+  }
+  
+  .checkbox__check {
+    display: none;
   }
 
-  &:checked {
-    color: $primary-100;
-    border-color: $primary-600;
-    background: $primary-600;
-    &::before {
-      opacity: 1;
+  * {
+    transition: all 0.12s linear;
+  }
+}
+
+.checkbox__wrapper input[type="checkbox"]:checked + svg {
+  .checkbox__box {
+    fill: $primary-600;
+    stroke: $primary-600;
+    color: $primary-600;
+  }
+
+  .checkbox__check {
+    display: block;
+    stroke: $primary-100;
+  }
+}
+
+.checkbox__wrapper input[type="checkbox"]:focus + svg {
+  outline: 3px solid $primary-300;
+  outline-offset: 3px;
+}
+
+.checkbox__wrapper input[type="checkbox"]:focus:not(:focus-visible) + svg {
+  outline: none;
+}
+
+/* WHCM styles */
+.checkbox__wrapper svg {
+  @media screen and (-ms-high-contrast: active) {
+    rect {
+      stroke: windowText;
     }
-    ~ label::before {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
+
+@media screen and (-ms-high-contrast: active) {
+  .checkbox__wrapper input[type="checkbox"]:checked ~ svg {
+    rect {
+      fill: windowText;
+    }
+
+    polyline {
+      stroke: highlight;
     }
   }
 }
