--- a/src/components/sicl-checkbox/sicl-checkbox.scss
+++ b/src/components/sicl-checkbox/sicl-checkbox.scss
@@ -1,6 +1,5 @@
 .checkbox__wrapper {
-	cursor: pointer;
-
+  cursor: pointer;
   display: flex;
   flex-direction: row;
   column-gap: 8px;
@@ -13,29 +12,29 @@
   line-height: $typography_line-height-body-2;
 }
 
-.checkbox__wrapper input[type="checkbox"] {
+.checkbox__wrapper input[type='checkbox'] {
   position: absolute;
-  width: 1.3em;
-  height: 1.3em;
+  width: 18px;
+  height: 18px;
   opacity: 0.00001;
 }
 
-.checkbox__wrapper input[type="checkbox"]:hover + svg {
+.checkbox__wrapper input[type='checkbox']:hover + svg {
   .checkbox__box {
     stroke: $primary-600;
   }
 }
 
 .checkbox__wrapper svg {
-  cursor: inherit;
-  width: 1.3em;
-  height: 1.3em;
+  flex-shrink: 0;
+  width: 18px;
+  height: 18px;
   box-sizing: border-box;
 
   .checkbox__box {
     color: $primary-400;
   }
-  
+
   .checkbox__check {
     display: none;
   }
@@ -45,11 +44,10 @@
   }
 }
 
-.checkbox__wrapper input[type="checkbox"]:checked + svg {
+.checkbox__wrapper input[type='checkbox']:checked + svg {
   .checkbox__box {
     fill: $primary-600;
     stroke: $primary-600;
-    color: $primary-600;
   }
 
   .checkbox__check {
@@ -58,13 +56,37 @@
   }
 }
 
-.checkbox__wrapper input[type="checkbox"]:focus + svg {
+.checkbox__wrapper input[type='checkbox']:focus + svg {
   outline: 3px solid $primary-300;
   outline-offset: 3px;
 }
 
-.checkbox__wrapper input[type="checkbox"]:focus:not(:focus-visible) + svg {
+.checkbox__wrapper input[type='checkbox']:focus:not(:focus-visible) + svg {
   outline: none;
+}
+
+.checkbox__wrapper input[type='checkbox']:disabled {
+  cursor: not-allowed;
+
+  & ~ .checkbox__label {
+    cursor: default;
+    color: $neutral-600;
+  }
+
+  & + svg {
+    .checkbox__box {
+      cursor: not-allowed;
+      fill: $neutral-300;
+      stroke: $neutral-700;
+      color: $neutral-700;
+    }
+
+    .checkbox__check {
+      cursor: not-allowed;
+      display: block;
+      stroke: $neutral-300;
+    }
+  }
 }
 
 /* WHCM styles */
@@ -77,7 +99,7 @@
 }
 
 @media screen and (-ms-high-contrast: active) {
-  .checkbox__wrapper input[type="checkbox"]:checked ~ svg {
+  .checkbox__wrapper input[type='checkbox']:checked ~ svg {
     rect {
       fill: windowText;
     }
