--- a/src/components/sicl-button/sicl-button.scss
+++ b/src/components/sicl-button/sicl-button.scss
@@ -1,5 +1,5 @@
 :host {
-  display: block;
+  display: flex;
 }
 
 .btn {
@@ -18,6 +18,7 @@
   font-size: $typography_size-body-1;
   font-weight: $typography_weight-semi-bold;
   line-height: $typography_line-height-body-1;
+  transition: 180ms box-shadow ease-in-out;
   
   &.primary {
     background: $primary-600;
