--- a/src/global/global.css
+++ b/src/global/global.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .container .column {
