➕ Variables 🔧 Unifying variables

--- a/src/components/sicl-radio/sicl-radio.scss
+++ b/src/components/sicl-radio/sicl-radio.scss
@@ -24,7 +24,7 @@ input[type="radio"] {
   cursor: inherit;
   -webkit-appearance: none;
   appearance: none;
-  background-color: #fff;
+  background-color: $neutral-50;
   margin: 0;
   flex-shrink: 0;
 
