--- a/src/components/sicl-input/sicl-input.scss
+++ b/src/components/sicl-input/sicl-input.scss
@@ -7,15 +7,15 @@
 }
 
 .input__icon-left {
-  color: $neutral-700;
+  color: $input-left-icon-color;
 }
 
 .input__icon-right {
-  color: $primary-500;
+  color: currentColor;
 }
 
 .input__label {
-  color: $neutral-700;
+  color: $input-label-color;
   font-family: $typography_font-family;
   font-size: $typography_size-body-2;
   font-weight: $typography_weight-semi-bold;
@@ -29,13 +29,13 @@
   font-family: inherit;
   font-size: inherit;
   padding: 0px;
+  color: $input-text-color;
   font-family: $typography_font-family;
   font-size: $typography_size-body-2;
   font-weight: $typography_weight-regular;
-  color: $neutral-900;
 
   @include placeholder {
-    color: $neutral-200;
+    color: $input-placeholder-color;
     font-weight: $typography_weight-semi-bold;
     opacity: 1;
   }
@@ -49,48 +49,48 @@
   box-sizing: border-box;
   padding: 12px 16px;
   border-radius: 16px;
-  border: 2px solid $primary-500;
+  border: 2px solid $input-default-border-color;
   transition: 180ms box-shadow ease-out;
   cursor: text;
 
   &[disabled] {
     cursor: not-allowed;
-    border: 2px solid $neutral-500;
-    background: $neutral-100;
+    border: 2px solid $input-disabled-border-color;
+    background: $input-disabled-background-color;
   }
 
   &:focus-within:not([disabled]) {
     outline: 3px solid transparent;
-    background-color: $primary-100;
-    border-color: 2px solid $primary-600;
-    box-shadow: $shadow-medium;
+    background-color: $input-focused-background-color;
+    border-color: 2px solid $input-default-focused-border-color;
+    box-shadow: $input-hover-effect;
   }
 
   &:hover:not([disabled]) {
-    background-color: $primary-100;
-    border: 2px solid $primary-600;
+    background-color: $input-focused-background-color;
+    border: 2px solid $input-default-focused-border-color;
   }
 
-  &.warning {
+  &.error {
     //background-color: #fff;
-    border: 2px solid $warning-light;
+    border: 2px solid $input-error-border-color;
 
     &[disabled] {
       cursor: not-allowed;
-      border: 2px solid $neutral-500;
-      background: $neutral-100;
+      border: 2px solid $input-disabled-border-color;
+      background: $input-disabled-background-color;
     }
 
     &:focus-within:not([disabled]) {
       outline: 3px solid transparent;
-      background-color: $primary-100;
-      border-color: 2px solid $warning-primary;
-      box-shadow: $shadow-medium;
+      background-color: $input-focused-background-color;
+      border-color: 2px solid $input-error-focused-border-color;
+      box-shadow: $input-hover-effect;
     }
 
     &:hover:not([disabled]) {
-      background-color: $primary-100;
-      border: 2px solid $warning-primary;
+      background-color: $input-focused-background-color;
+      border: 2px solid $input-error-focused-border-color;
     }
   }
 }
