--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -36,10 +36,15 @@ $neutral-200: hsl(274, 5%, 82%);
 $neutral-100: hsl(274, 5%, 92%);
 $neutral-50: hsl(274, 5%, 98%);
 
+// Danger
+$danger-dark: hsl(0, 70%, 40%);
+$danger-primary: hsl(0, 70%, 50%);
+$danger-light: hsl(0, 80%, 70%);
+
 // Warning
-$warning-dark: hsl(0, 70%, 40%);
-$warning-primary: hsl(0, 70%, 50%);
-$warning-light: hsl(0, 80%, 70%);
+$warning-dark: hsl(47, 98%, 31%);
+$warning-primary: hsl(47, 98%, 50%);
+$warning-light: hsl(47, 98%, 65%);
 
 // Success
 $success-dark: hsl(126, 60%, 28%);
@@ -95,236 +100,3 @@ $shadow-large: 0px 8px 12px 6px hsla(0, 0%, 0%, 0.15), 0px 4px 4px 0px hsla(0, 0
 $aura-small: 0px 1px 2px 0px hsla(0, 0%, 87%, 0.3), 0px 1px 3px 1px hsla(0, 0%, 87%, 0.15);
 $aura-medium: 0px 4px 8px 3px hsla(0, 0%, 87%, 0.15), 0px 1px 3px 0px hsla(0, 0%, 87%, 0.3);
 $aura-large: 0px 8px 12px 6px hsla(0, 0%, 87%, 0.15), 0px 4px 4px 0px hsla(0, 0%, 87%, 0.3);
-
-/**
- * Light theme
- */
-:root {
-  // General
-  $background-color: $neutral-50;
-
-  // Notes box - not used right now (only internally in Figma), but could be used in the future
-  $box-background-color: $neutral-100;
-  $box-text-color: $neutral-700;
-
-  // Text
-  $text-header-color: $neutral-900;
-  $text-subtitle-color: $neutral-700;
-  $text-paragraph-color: $neutral-800;
-
-  // Button
-  $button-hover-effect: $shadow-small;
-
-  $button-primary-background-color: $primary-600;
-  $button-primary-focused-background-color: $primary-700;
-  $button-primary-disabled-background-color: $neutral-200;
-  $button-primary-text-color: $primary-100;
-  $button-primary-disabled-color: $primary-600;
-
-  $button-secondary-background-color: $secondary-500;
-  $button-secondary-focused-background-color: $secondary-600;
-  $button-secondary-disabled-background-color: $neutral-50;
-  $button-secondary-text-color: $secondary-100;
-  $button-secondary-disabled-color: $neutral-400;
-  $button-secondary-disabled-border-color: $neutral-300;
-
-  $button-tertiary-background-color: $primary-200;
-  $button-tertiary-focused-background-color: $primary-300;
-  $button-tertiary-disabled-background-color: $neutral-50;
-  $button-tertiary-text-color: $primary-800;
-  $button-tertiary-disabled-color: $neutral-400;
-
-  $button-warning-background-color: $warning-primary;
-  $button-warning-focused-background-color: $warning-dark;
-  $button-warning-disabled-background-color: $neutral-50;
-  $button-warning-text-color: $primary-100;
-  $button-warning-disabled-color: $warning-light;
-  $button-warning-disabled-border-color: $warning-light;
-
-  // Input
-  $input-hover-effect: $shadow-small;
-
-  $input-background-color: $neutral-50;
-  $input-text-color: $neutral-900;
-  $input-focused-background-color: $primary-100;
-  $input-placeholder-color: $neutral-300;
-  $input-label-color: $neutral-700;
-
-  $input-disabled-background-color: $neutral-100;
-  $input-disabled-border-color: $neutral-500;
-
-  $input-default-border-color: $primary-500;
-  $input-default-focused-border-color: $primary-600;
-  $input-default-left-icon-color: $neutral-700;
-  $input-default-right-icon-color: $input-default-border-color;
-  $input-default-right-icon-focused-color: $input-default-focused-border-color;
-
-  $input-warning-border-color: $warning-light;
-  $input-warning-focused-border-color: $warning-primary;
-  $input-warning-left-icon-color: $neutral-700;
-  $input-warning-right-icon-color: $input-warning-border-color;
-  $input-warning-right-icon-focused-color: $input-warning-focused-border-color;
-
-  // Checkbox
-  $checkbox-background-color: $neutral-50;
-  $checkbox-focused-background-color: $primary-100;
-  $checkbox-text-color: $neutral-900;
-  $checkbox-outline-color: $primary-300;
-  $checkbox-default-check-color: $primary-100;
-
-  $checkbox-default-border-color: $primary-400;
-  $checkbox-default-focused-border-color: $primary-600;
-  $checkbox-default-checked-background-color: $primary-600;
-  $checkbox-default-checked-border-color: $primary-600;
-
-  $checkbox-warning-border-color: $warning-light;
-  $checkbox-warning-focused-background-color: $warning-primary;
-  $checkbox-warning-focused-border-color: $warning-primary;
-
-  $checkbox-disabled-background-color: $neutral-300;
-  $checkbox-disabled-border-color: $neutral-700;
-  $checkbox-disabled-color: $neutral-600;
-
-  // Radio
-  $radio-background-color: $neutral-50;
-  $radio-background-color: $primary-100;
-  $radio-text-color: $neutral-900;
-  $radio-outline-color: $primary-300;
-  $radio-default-check-color: $primary-100;
-
-  $radio-default-border-color: $primary-400;
-  $radio-default-focused-border-color: $primary-600;
-  $radio-default-checked-background-color: $primary-600;
-  $radio-default-checked-border-color: $primary-600;
-
-  $radio-warning-border-color: $warning-light;
-  $radio-warning-focused-background-color: $warning-primary;
-  $radio-warning-focused-border-color: $warning-primary;
-
-  $radio-disabled-background-color: $neutral-300;
-  $radio-disabled-border-color: $neutral-700;
-  $radio-disabled-color: $neutral-600;
-
-  // Toast
-  $toast-primary-text-color: $primary-100;
-
-  $toast-primary-background-color: $primary-600;
-  $toast-primary-before-background-color: $primary-700;
-
-  $toast-warning-background-color: $warning-primary;
-  $toast-warning-before-background-color: $warning-dark;
-
-  $toast-success-background-color: $success-primary;
-  $toast-success-before-background-color: $success-dark;
-}
-
-/**
- * Dark theme
- * TODO: Adapt to acutal dark theme
- */
-:root.dark-theme {
-  // General
-  $background-color: $neutral-800;
-
-  // Notes box - not used right now (only internally in Figma), but could be used in the future
-  $box-background-color: $neutral-100;
-  $box-text-color: $neutral-700;
-
-  // Text
-  $text-header-color: $neutral-900;
-  $text-subtitle-color: $neutral-700;
-  $text-paragraph-color: $neutral-800;
-
-  // Button
-  $button-hover-effect: $shadow-small;
-
-  $button-primary-background-color: $primary-600;
-  $button-primary-focused-background-color: $primary-700;
-  $button-primary-disabled-background-color: $neutral-200;
-  $button-primary-color: $primary-100;
-  $button-primary-disabled-color: $primary-600;
-
-  $button-secondary-background-color: $secondary-500;
-  $button-secondary-focused-background-color: $secondary-600;
-  $button-secondary-disabled-background-color: $neutral-50;
-  $button-secondary-color: $secondary-100;
-  $button-secondary-disabled-color: $neutral-400;
-  $button-secondary-disabled-border-color: $neutral-300;
-
-  $button-tertiary-background-color: $primary-200;
-  $button-tertiary-focused-background-color: $primary-300;
-  $button-tertiary-disabled-background-color: $neutral-50;
-  $button-tertiary-color: $primary-800;
-  $button-tertiary-disabled-color: $neutral-400;
-
-  $button-warning-background-color: $warning-primary;
-  $button-warning-focused-background-color: $warning-dark;
-  $button-warning-disabled-background-color: $neutral-50;
-  $button-warning-color: $primary-100;
-  $button-warning-disabled-color: $warning-light;
-  $button-warning-disabled-border-color: $warning-light;
-
-  // Input
-  $input-hover-effect: $shadow-small;
-
-  $input-background-color: $neutral-50;
-  $input-color: $neutral-900;
-  $input-focused-background-color: $primary-100;
-  $input-placeholder-color: $neutral-300;
-  $input-label-color: $neutral-700;
-
-  $input-disabled-background-color: $neutral-100;
-  $input-disabled-border-color: $neutral-500;
-
-  $input-default-border-color: $primary-500;
-  $input-default-focused-border-color: $primary-600;
-  $input-default-left-icon-color: $neutral-700;
-  $input-default-right-icon-color: $input-default-border-color;
-  $input-default-right-icon-focused-color: $input-default-focused-border-color;
-
-  $input-warning-border-color: $warning-light;
-  $input-warning-focused-border-color: $warning-primary;
-  $input-warning-left-icon-color: $neutral-700;
-  $input-warning-right-icon-color: $input-warning-border-color;
-  $input-warning-right-icon-focused-color: $input-warning-focused-border-color;
-
-  // Checkbox
-  $checkbox-background-color: $neutral-50;
-  $checkbox-focused-background-color: $primary-100;
-  $checkbox-color: $neutral-900;
-  $checkbox-outline-color: $primary-300;
-  $checkbox-default-check-color: $primary-100;
-
-  $checkbox-default-border-color: $primary-400;
-  $checkbox-default-focused-border-color: $primary-600;
-  $checkbox-default-checked-background-color: $primary-600;
-  $checkbox-default-checked-border-color: $primary-600;
-
-  $checkbox-warning-border-color: $warning-light;
-  $checkbox-warning-focused-background-color: $warning-primary;
-  $checkbox-warning-focused-border-color: $warning-primary;
-
-  $checkbox-disabled-background-color: $neutral-300;
-  $checkbox-disabled-border-color: $neutral-700;
-  $checkbox-disabled-color: $neutral-600;
-
-  // Radio
-  $radio-background-color: $neutral-50;
-  $radio-background-color: $primary-100;
-  $radio-color: $neutral-900;
-  $radio-outline-color: $primary-300;
-  $radio-default-check-color: $primary-100;
-
-  $radio-default-border-color: $primary-400;
-  $radio-default-focused-border-color: $primary-600;
-  $radio-default-checked-background-color: $primary-600;
-  $radio-default-checked-border-color: $primary-600;
-
-  $radio-warning-border-color: $warning-light;
-  $radio-warning-focused-background-color: $warning-primary;
-  $radio-warning-focused-border-color: $warning-primary;
-
-  $radio-disabled-background-color: $neutral-300;
-  $radio-disabled-border-color: $neutral-700;
-  $radio-disabled-color: $neutral-600;
-}
